--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "africastalking": "^0.6.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.4.1",
-    "ussd-menu-builder": "^1.2.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
